glassware -> glassware subitems also added some textures that don't work