@@ -1,7 +1,12 @@
 package net.scottnotfound.merculab.block.glassware;
 
 import net.minecraft.block.material.Material;
+import net.minecraft.block.properties.IProperty;
+import net.minecraft.block.properties.PropertyEnum;
+import net.minecraft.block.state.BlockStateContainer;
 import net.minecraft.block.state.IBlockState;
+import net.minecraft.client.renderer.block.model.ModelResourceLocation;
+import net.minecraft.creativetab.CreativeTabs;
 import net.minecraft.entity.player.EntityPlayer;
 import net.minecraft.item.Item;
 import net.minecraft.item.ItemBlock;
@@ -10,39 +15,65 @@ import net.minecraft.nbt.NBTTagCompound;
 import net.minecraft.tileentity.TileEntity;
 import net.minecraft.util.EnumFacing;
 import net.minecraft.util.EnumHand;
-import net.minecraft.util.ResourceLocation;
+import net.minecraft.util.NonNullList;
 import net.minecraft.util.math.BlockPos;
 import net.minecraft.world.World;
-import net.minecraftforge.fml.common.FMLCommonHandler;
-import net.minecraftforge.fml.common.FMLLog;
+import net.minecraftforge.client.model.ModelLoader;
 import net.minecraftforge.fml.common.registry.ForgeRegistries;
 import net.minecraftforge.fml.common.registry.GameRegistry;
-import net.scottnotfound.merculab.MercuLab;
+import net.minecraftforge.fml.relauncher.Side;
+import net.minecraftforge.fml.relauncher.SideOnly;
 import net.scottnotfound.merculab.block.BlockChemicalBase;
-import org.apache.commons.lang3.text.WordUtils;
+import net.scottnotfound.merculab.init.MercuLabItems;
 
 import javax.annotation.Nullable;
-import java.lang.reflect.Constructor;
 import java.lang.reflect.InvocationTargetException;
 import java.util.Random;
 
 public class BlockChemicalGlassware extends BlockChemicalBase {
 
+    public static final PropertyEnum<EnumGlasswareType> VARIANT = PropertyEnum.create("variant", EnumGlasswareType.class);
+
     static final int BASE_CAPACITY = 1000;
 
     final int capacity = 1000;
 
-    private final String name;
-
-
-    public BlockChemicalGlassware(String name) {
+    public BlockChemicalGlassware() {
         super(Material.GLASS);
-        this.name = name;
+        this.setDefaultState(this.blockState.getBaseState().withProperty(VARIANT, EnumGlasswareType.GLASS_VIAL));
+        this.setCreativeTab(MercuLabItems.CHEM);
+    }
+
+    @Override
+    public int damageDropped(IBlockState state) {
+        return state.getValue(VARIANT).getMetadata();
+    }
+
+    @Override
+    public void getSubBlocks(CreativeTabs itemIn, NonNullList<ItemStack> items) {
+        for (EnumGlasswareType glasswareType : EnumGlasswareType.values()) {
+            items.add(new ItemStack(this, 1, glasswareType.getMetadata()));
+        }
+    }
+
+    @Override
+    public IBlockState getStateFromMeta(int meta) {
+        return this.getDefaultState().withProperty(VARIANT, EnumGlasswareType.byMetadata(meta));
+    }
+
+    @Override
+    public int getMetaFromState(IBlockState state) {
+        return state.getValue(VARIANT).getMetadata();
+    }
+
+    @Override
+    protected BlockStateContainer createBlockState() {
+        return new BlockStateContainer(this, new IProperty[] {VARIANT});
     }
 
     @Override
     public Item getItemDropped(IBlockState state, Random rand, int fortune) {
-        return ForgeRegistries.ITEMS.getValue(new ResourceLocation(MercuLab.MOD_ID, name));
+        return Item.getItemFromBlock(this);
     }
 
     @Override
@@ -54,7 +85,15 @@ public class BlockChemicalGlassware extends BlockChemicalBase {
 
     @Override
     public void harvestBlock(World worldIn, EntityPlayer player, BlockPos pos, IBlockState state, TileEntity te, ItemStack itemStack) {
-        ItemStack newStack = new ItemStack(getItemDropped(state, new Random(), 0));
+
+        Item item = Item.getItemFromBlock(this);
+        int i = 0;
+
+        if (item.getHasSubtypes()) {
+            i = this.getMetaFromState(state);
+        }
+
+        ItemStack newStack = new ItemStack(item, 1, i);
 
         NBTTagCompound tileEntityTag = new NBTTagCompound();
 
@@ -74,52 +113,43 @@ public class BlockChemicalGlassware extends BlockChemicalBase {
     @Override
     public TileEntity createNewTileEntity(World worldIn, int meta) {
 
-        TileEntity tileEntity;
-
         try {
-            Class<? extends TileEntity> tileEntityClass = this.getTileEntityClass();
-            Constructor<? extends TileEntity> constructor = tileEntityClass.getConstructor();
-            tileEntity = constructor.newInstance();
-        } catch (NoSuchMethodException | IllegalAccessException | InstantiationException | InvocationTargetException e) {
-            FMLLog.bigWarning("Fatal internal error.", e);
-            FMLCommonHandler.instance().exitJava(1, false);
-            tileEntity = null;
+            return EnumGlasswareType.byMetadata(meta).getTileEntityClass().getConstructor().newInstance();
+        } catch (InstantiationException | IllegalAccessException | NoSuchMethodException | InvocationTargetException e) {
+            e.printStackTrace();
+            return null;
         }
-
-        return tileEntity;
     }
 
     @Override
     public void init() {
 
         // register this Block
-        this.setRegistryName(this.name);
+        this.setRegistryName("glassware");
         ForgeRegistries.BLOCKS.register(this);
 
         // register this block's ItemBlock
         ItemBlock itemBlock = new ItemBlockChemicalGlassware(this);
-        itemBlock.setRegistryName(this.name);
+        itemBlock.setRegistryName("glassware");
         ForgeRegistries.ITEMS.register(itemBlock);
 
-        // register this block's TileEntity
-        GameRegistry.registerTileEntity(this.getTileEntityClass(), this.name);
+        // register this block's TileEntities
+        for (EnumGlasswareType glasswareType : EnumGlasswareType.values()) {
+            GameRegistry.registerTileEntity(glasswareType.getTileEntityClass(), glasswareType.getName());
+        }
 
     }
 
-    private Class<? extends TileEntity> getTileEntityClass() {
-
-        Class<? extends TileEntity> tileEntityClass;
-
-        try {
-            tileEntityClass = Class.forName("net.scottnotfound.merculab.block.glassware.TileEntity"
-                                            + WordUtils.capitalizeFully(this.name)).asSubclass(TileEntity.class);
-        } catch (ClassNotFoundException e) {
-            FMLLog.bigWarning("Class TileEntity" + WordUtils.capitalizeFully(this.name) +
-                               " could not be found. This is a fatal error.", e);
-            FMLCommonHandler.instance().exitJava(1, false);
-            tileEntityClass = TileEntity.class;
+    @SideOnly(Side.CLIENT)
+    public void initModel() {
+        for (EnumGlasswareType glasswareType : EnumGlasswareType.values()) {
+            ModelLoader.setCustomModelResourceLocation(
+                    Item.getItemFromBlock(this),
+                    glasswareType.getMetadata(),
+                    new ModelResourceLocation(
+                            getRegistryName(),
+                            "inventory"));
         }
 
-        return tileEntityClass;
     }
 }
